cmake_minimum_required(VERSION 3.10)
project(mcpe_linux)

set(CMAKE_CXX_STANDARD 11)

# 头文件目录，参考win32工程，递归包含所有相关子目录
set(SRC_DIR "${CMAKE_SOURCE_DIR}/../../src")
set(LIB_DIR "${CMAKE_SOURCE_DIR}/../../lib")
include_directories(
    "${SRC_DIR}"
    "${LIB_DIR}/include"
    "${SRC_DIR}/client"
    "${SRC_DIR}/client/gamemode"
    "${SRC_DIR}/client/gui"
    "${SRC_DIR}/client/gui/components"
    "${SRC_DIR}/client/gui/screens"
    "${SRC_DIR}/client/gui/screens/crafting"
    "${SRC_DIR}/client/gui/screens/touch"
    "${SRC_DIR}/client/model"
    "${SRC_DIR}/client/model/geom"
    "${SRC_DIR}/client/particle"
    "${SRC_DIR}/client/player"
    "${SRC_DIR}/client/player/input"
    "${SRC_DIR}/client/player/input/touchscreen"
    "${SRC_DIR}/client/renderer"
    "${SRC_DIR}/client/renderer/entity"
    "${SRC_DIR}/client/renderer/ptexture"
    "${SRC_DIR}/client/renderer/tileentity"
    "${SRC_DIR}/locale"
    "${SRC_DIR}/nbt"
    "${SRC_DIR}/network"
    "${SRC_DIR}/platform"
    "${SRC_DIR}/platform/input"
    "${SRC_DIR}/raknet"
    "${SRC_DIR}/server"
    "${SRC_DIR}/util"
    "${SRC_DIR}/world"
    "${SRC_DIR}/world/entity"
    "${SRC_DIR}/world/entity/ai/control"
    "${SRC_DIR}/world/entity/animal"
    "${SRC_DIR}/world/entity/item"
    "${SRC_DIR}/world/entity/monster"
    "${SRC_DIR}/world/entity/player"
    "${SRC_DIR}/world/entity/projectile"
    "${SRC_DIR}/world/food"
    "${SRC_DIR}/world/inventory"
    "${SRC_DIR}/world/item"
    "${SRC_DIR}/world/item/crafting"
    "${SRC_DIR}/world/level"
    "${SRC_DIR}/world/level/biome"
    "${SRC_DIR}/world/level/chunk"
    "${SRC_DIR}/world/level/dimension"
    "${SRC_DIR}/world/level/levelgen"
    "${SRC_DIR}/world/level/levelgen/feature"
    "${SRC_DIR}/world/level/levelgen/synth"
    "${SRC_DIR}/world/level/material"
    "${SRC_DIR}/world/level/pathfinder"
    "${SRC_DIR}/world/level/storage"
    "${SRC_DIR}/world/level/tile"
    "${SRC_DIR}/world/level/tile/entity"
    "${SRC_DIR}/world/phys"
)

# 源文件收集
file(GLOB_RECURSE SRC_FILES
    "${SRC_DIR}/../../src/*.cpp"
    "${SRC_DIR}/client/gamemode/CreatorMode.cpp"
    "${SRC_DIR}/client/gamemode/GameMode.cpp"
    "${SRC_DIR}/client/gamemode/CreativeMode.cpp"
    "${SRC_DIR}/client/gamemode/SurvivalMode.cpp"
    "${SRC_DIR}/client/gui/components/Button.cpp"
    "${SRC_DIR}/client/gui/components/GuiElement.cpp"
    "${SRC_DIR}/client/gui/components/GuiElementContainer.cpp"
    "${SRC_DIR}/client/gui/components/InventoryPane.cpp"
    "${SRC_DIR}/client/gui/components/ItemPane.cpp"
    "${SRC_DIR}/client/gui/components/LargeImageButton.cpp"
    "${SRC_DIR}/client/gui/components/NinePatch.cpp"
    "${SRC_DIR}/client/gui/components/OptionsGroup.cpp"
    "${SRC_DIR}/client/gui/components/OptionsItem.cpp"
    "${SRC_DIR}/client/gui/components/OptionsPane.cpp"
    "${SRC_DIR}/client/gui/components/RolledSelectionListH.cpp"
    "${SRC_DIR}/client/gui/components/RolledSelectionListV.cpp"
    "${SRC_DIR}/client/gui/components/ScrolledSelectionList.cpp"
    "${SRC_DIR}/client/gui/components/ScrollingPane.cpp"
    "${SRC_DIR}/client/gui/components/Slider.cpp"
    "${SRC_DIR}/client/gui/components/SmallButton.cpp"
    "${SRC_DIR}/client/gui/components/ImageButton.cpp"
    "${SRC_DIR}/client/gui/components/TextBox.cpp"
    "${SRC_DIR}/client/gui/Font.cpp"
    "${SRC_DIR}/client/gui/Gui.cpp"
    "${SRC_DIR}/client/gui/GuiComponent.cpp"
    "${SRC_DIR}/client/gui/Screen.cpp"
    "${SRC_DIR}/client/gui/screens/ArmorScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ChatScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ChestScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ChooseLevelScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ConfirmScreen.cpp"
    "${SRC_DIR}/client/gui/screens/crafting/CraftingFilters.cpp"
    "${SRC_DIR}/client/gui/screens/crafting/PaneCraftingScreen.cpp"
    "${SRC_DIR}/client/gui/screens/crafting/StonecutterScreen.cpp"
    "${SRC_DIR}/client/gui/screens/crafting/WorkbenchScreen.cpp"
    "${SRC_DIR}/client/gui/screens/DeathScreen.cpp"
    "${SRC_DIR}/client/gui/screens/SimpleChooseLevelScreen.cpp"
    "${SRC_DIR}/client/gui/screens/FurnaceScreen.cpp"
    "${SRC_DIR}/client/gui/screens/InBedScreen.cpp"
    "${SRC_DIR}/client/gui/screens/IngameBlockSelectionScreen.cpp"
    "${SRC_DIR}/client/gui/screens/JoinGameScreen.cpp"
    "${SRC_DIR}/client/gui/screens/OptionsScreen.cpp"
    "${SRC_DIR}/client/gui/screens/PauseScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ProgressScreen.cpp"
    "${SRC_DIR}/client/gui/screens/RenameMPLevelScreen.cpp"
    "${SRC_DIR}/client/gui/screens/ScreenChooser.cpp"
    "${SRC_DIR}/client/gui/screens/SelectWorldScreen.cpp"
    "${SRC_DIR}/client/gui/screens/StartMenuScreen.cpp"
    "${SRC_DIR}/client/gui/screens/TextEditScreen.cpp"
    "${SRC_DIR}/client/gui/screens/touch/TouchIngameBlockSelectionScreen.cpp"
    "${SRC_DIR}/client/gui/screens/touch/TouchJoinGameScreen.cpp"
    "${SRC_DIR}/client/gui/screens/touch/TouchSelectWorldScreen.cpp"
    "${SRC_DIR}/client/gui/screens/touch/TouchStartMenuScreen.cpp"
    "${SRC_DIR}/client/gui/screens/UploadPhotoScreen.cpp"
    "${SRC_DIR}/client/IConfigListener.cpp"
    "${SRC_DIR}/client/Minecraft.cpp"
    "${SRC_DIR}/client/model/ChickenModel.cpp"
    "${SRC_DIR}/client/model/CowModel.cpp"
    "${SRC_DIR}/client/model/geom/Cube.cpp"
    "${SRC_DIR}/client/model/geom/ModelPart.cpp"
    "${SRC_DIR}/client/model/geom/Polygon.cpp"
    "${SRC_DIR}/client/model/HumanoidModel.cpp"
    "${SRC_DIR}/client/model/PigModel.cpp"
    "${SRC_DIR}/client/model/QuadrupedModel.cpp"
    "${SRC_DIR}/client/model/SheepFurModel.cpp"
    "${SRC_DIR}/client/model/SheepModel.cpp"
    "${SRC_DIR}/client/MouseHandler.cpp"
    "${SRC_DIR}/client/Options.cpp"
    "${SRC_DIR}/client/OptionsFile.cpp"
    "${SRC_DIR}/client/OptionStrings.cpp"
    "${SRC_DIR}/client/particle/Particle.cpp"
    "${SRC_DIR}/client/particle/ParticleEngine.cpp"
    "${SRC_DIR}/client/player/input/KeyboardInput.cpp"
    "${SRC_DIR}/client/player/input/touchscreen/TouchScreenInput.cpp"
    "${SRC_DIR}/client/player/LocalPlayer.cpp"
    "${SRC_DIR}/client/player/RemotePlayer.cpp"
    "${SRC_DIR}/client/renderer/Chunk.cpp"
    "${SRC_DIR}/client/renderer/culling/Frustum.cpp"
    "${SRC_DIR}/client/renderer/EntityTileRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/ArrowRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/ChickenRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/EntityRenderDispatcher.cpp"
    "${SRC_DIR}/client/renderer/entity/EntityRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/FallingTileRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/HumanoidMobRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/ItemRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/ItemSpriteRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/MobRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/PaintingRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/PlayerRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/SheepRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/TntRenderer.cpp"
    "${SRC_DIR}/client/renderer/entity/TripodCameraRenderer.cpp"
    "${SRC_DIR}/client/renderer/GameRenderer.cpp"
    "${SRC_DIR}/client/renderer/gles.cpp"
    "${SRC_DIR}/client/renderer/ItemInHandRenderer.cpp"
    "${SRC_DIR}/client/renderer/LevelRenderer.cpp"
    "${SRC_DIR}/client/renderer/ptexture/DynamicTexture.cpp"
    "${SRC_DIR}/client/renderer/RenderChunk.cpp"
    "${SRC_DIR}/client/renderer/RenderList.cpp"
    "${SRC_DIR}/client/renderer/Tesselator.cpp"
    "${SRC_DIR}/client/renderer/Textures.cpp"
    "${SRC_DIR}/client/renderer/tileentity/ChestRenderer.cpp"
    "${SRC_DIR}/client/renderer/tileentity/SignRenderer.cpp"
    "${SRC_DIR}/client/renderer/tileentity/TileEntityRenderDispatcher.cpp"
    "${SRC_DIR}/client/renderer/tileentity/TileEntityRenderer.cpp"
    "${SRC_DIR}/client/renderer/TileRenderer.cpp"
    "${SRC_DIR}/client/sound/Sound.cpp"
    "${SRC_DIR}/client/sound/SoundEngine.cpp"
    "${SRC_DIR}/locale/I18n.cpp"
    "${SRC_DIR}/main.cpp"
    "${SRC_DIR}/nbt/Tag.cpp"
    "${SRC_DIR}/network/ClientSideNetworkHandler.cpp"
    "${SRC_DIR}/network/NATPunchHandler.cpp"
    "${SRC_DIR}/network/command/CommandServer.cpp"
    "${SRC_DIR}/network/NetEventCallback.cpp"
    "${SRC_DIR}/network/Packet.cpp"
    "${SRC_DIR}/network/PHPDirectoryServer2.cpp"
    "${SRC_DIR}/network/RakNetInstance.cpp"
    "${SRC_DIR}/network/ServerSideNetworkHandler.cpp"
    "${SRC_DIR}/NinecraftApp.cpp"
    "${SRC_DIR}/Performance.cpp"
    "${SRC_DIR}/platform/CThread.cpp"
    "${SRC_DIR}/platform/input/Controller.cpp"
    "${SRC_DIR}/platform/input/Keyboard.cpp"
    "${SRC_DIR}/platform/input/Mouse.cpp"
    "${SRC_DIR}/platform/input/Multitouch.cpp"
    "${SRC_DIR}/platform/time.cpp"
    "${SRC_DIR}/raknet/BitStream.cpp"
    "${SRC_DIR}/raknet/CCRakNetSlidingWindow.cpp"
    "${SRC_DIR}/raknet/CCRakNetUDT.cpp"
    "${SRC_DIR}/raknet/CheckSum.cpp"
    "${SRC_DIR}/raknet/CloudClient.cpp"
    "${SRC_DIR}/raknet/CloudCommon.cpp"
    "${SRC_DIR}/raknet/CloudServer.cpp"
    "${SRC_DIR}/raknet/CommandParserInterface.cpp"
    "${SRC_DIR}/raknet/ConnectionGraph2.cpp"
    "${SRC_DIR}/raknet/ConsoleServer.cpp"
    "${SRC_DIR}/raknet/DataCompressor.cpp"
    "${SRC_DIR}/raknet/DirectoryDeltaTransfer.cpp"
    "${SRC_DIR}/raknet/DS_BytePool.cpp"
    "${SRC_DIR}/raknet/DS_ByteQueue.cpp"
    "${SRC_DIR}/raknet/DS_HuffmanEncodingTree.cpp"
    "${SRC_DIR}/raknet/DS_Table.cpp"
    "${SRC_DIR}/raknet/DynDNS.cpp"
    "${SRC_DIR}/raknet/EmailSender.cpp"
    "${SRC_DIR}/raknet/EncodeClassName.cpp"
    "${SRC_DIR}/raknet/EpochTimeToString.cpp"
    "${SRC_DIR}/raknet/FileList.cpp"
    "${SRC_DIR}/raknet/FileListTransfer.cpp"
    "${SRC_DIR}/raknet/FileOperations.cpp"
    "${SRC_DIR}/raknet/FormatString.cpp"
    "${SRC_DIR}/raknet/FullyConnectedMesh2.cpp"
    "${SRC_DIR}/raknet/Getche.cpp"
    "${SRC_DIR}/raknet/Gets.cpp"
    "${SRC_DIR}/raknet/GetTime.cpp"
    "${SRC_DIR}/raknet/gettimeofday.cpp"
    "${SRC_DIR}/raknet/GridSectorizer.cpp"
    "${SRC_DIR}/raknet/HTTPConnection.cpp"
    "${SRC_DIR}/raknet/IncrementalReadInterface.cpp"
    "${SRC_DIR}/raknet/Itoa.cpp"
    "${SRC_DIR}/raknet/LinuxStrings.cpp"
    "${SRC_DIR}/raknet/LocklessTypes.cpp"
    "${SRC_DIR}/raknet(LogCommandParser.cpp"
    "${SRC_DIR}/raknet/MessageFilter.cpp"
    "${SRC_DIR}/raknet/NatPunchthroughClient.cpp"
    "${SRC_DIR}/raknet/NatPunchthroughServer.cpp"
    "${SRC_DIR}/raknet/NatTypeDetectionClient.cpp"
    "${SRC_DIR}/raknet/NatTypeDetectionCommon.cpp"
    "${SRC_DIR}/raknet/NatTypeDetectionServer.cpp"
    "${SRC_DIR}/raknet/NetworkIDManager.cpp"
    "${SRC_DIR}/raknet/NetworkIDObject.cpp"
    "${SRC_DIR}/raknet/PacketConsoleLogger.cpp"
    "${SRC_DIR}/raknet/PacketFileLogger.cpp"
    "${SRC_DIR}/raknet/PacketizedTCP.cpp"
    "${SRC_DIR}/raknet/PacketLogger.cpp"
    "${SRC_DIR}/raknet/PacketOutputWindowLogger.cpp"
    "${SRC_DIR}/raknet/PluginInterface2.cpp"
    "${SRC_DIR}/raknet/RakMemoryOverride.cpp"
    "${SRC_DIR}/raknet/RakNetCommandParser.cpp"
    "${SRC_DIR}/raknet/RakNetSocket.cpp"
    "${SRC_DIR}/raknet/RakNetStatistics.cpp"
    "${SRC_DIR}/raknet/RakNetTransport2.cpp"
    "${SRC_DIR}/raknet/RakNetTypes.cpp"
    "${SRC_DIR}/raknet/RakPeer.cpp"
    "${SRC_DIR}/raknet/RakSleep.cpp"
    "${SRC_DIR}/raknet/RakString.cpp"
    "${SRC_DIR}/raknet/RakThread.cpp"
    "${SRC_DIR}/raknet/RakWString.cpp"
    "${SRC_DIR}/raknet/Rand.cpp"
    "${SRC_DIR}/raknet/rdlmalloc.cpp"
    "${SRC_DIR}/raknet/ReadyEvent.cpp"
    "${SRC_DIR}/raknet/ReliabilityLayer.cpp"
    "${SRC_DIR}/raknet/ReplicaManager3.cpp"
    "${SRC_DIR}/raknet/Router2.cpp"
    "${SRC_DIR}/raknet/RPC4Plugin.cpp"
    "${SRC_DIR}/raknet/SecureHandshake.cpp"
    "${SRC_DIR}/raknet/SendToThread.cpp"
    "${SRC_DIR}/raknet/SHA1.cpp"
    "${SRC_DIR}/raknet/SignaledEvent.cpp"
    "${SRC_DIR}/raknet/SimpleMutex.cpp"
    "${SRC_DIR}/raknet/SocketLayer.cpp"
    "${SRC_DIR}/raknet/StringCompressor.cpp"
    "${SRC_DIR}/raknet/StringTable.cpp"
    "${SRC_DIR}/raknet/SuperFastHash.cpp"
    "${SRC_DIR}/raknet/TableSerializer.cpp"
    "${SRC_DIR}/raknet/TCPInterface.cpp"
    "${SRC_DIR}/raknet/TeamBalancer.cpp"
    "${SRC_DIR}/raknet/TelnetTransport.cpp"
    "${SRC_DIR}/raknet/ThreadsafePacketLogger.cpp"
    "${SRC_DIR}/raknet/TwoWayAuthentication.cpp"
    "${SRC_DIR}/raknet/UDPForwarder.cpp"
    "${SRC_DIR}/raknet/UDPProxyClient.cpp"
    "${SRC_DIR}/raknet/UDPProxyCoordinator.cpp"
    "${SRC_DIR}/raknet/UDPProxyServer.cpp"
    "${SRC_DIR}/raknet/VariableDeltaSerializer.cpp"
    "${SRC_DIR}/raknet/VariableListDeltaTracker.cpp"
    "${SRC_DIR}/raknet/VariadicSQLParser.cpp"
    "${SRC_DIR}/raknet/WSAStartupSingleton.cpp"
    "${SRC_DIR}/raknet/_FindFirst.cpp"
    "${SRC_DIR}/server/ServerLevel.cpp"
    "${SRC_DIR}/server/ServerPlayer.cpp"
    "${SRC_DIR}/SharedConstants.cpp"
    "${SRC_DIR}/util/DataIO.cpp"
    "${SRC_DIR}/util/Mth.cpp"
    "${SRC_DIR}/util/PerfRenderer.cpp"
    "${SRC_DIR}/util/StringUtils.cpp"
    "${SRC_DIR}/util/PerfTimer.cpp"
    "${SRC_DIR}/world/Direction.cpp"
    "${SRC_DIR}/world/entity/AgableMob.cpp"
    "${SRC_DIR}/world/entity/ai/control/MoveControl.cpp"
    "${SRC_DIR}/world/entity/animal/Animal.cpp"
    "${SRC_DIR}/world/entity/animal/Chicken.cpp"
    "${SRC_DIR}/world/entity/animal/Cow.cpp"
    "${SRC_DIR}/world/entity/animal/Pig.cpp"
    "${SRC_DIR}/world/entity/animal/Sheep.cpp"
    "${SRC_DIR}/world/entity/animal/WaterAnimal.cpp"
    "${SRC_DIR}/world/entity/Entity.cpp"
    "${SRC_DIR}/world/entity/EntityFactory.cpp"
    "${SRC_DIR}/world/entity/FlyingMob.cpp"
    "${SRC_DIR}/world/entity/HangingEntity.cpp"
    "${SRC_DIR}/world/entity/item/FallingTile.cpp"
    "${SRC_DIR}/world/entity/item/ItemEntity.cpp"
    "${SRC_DIR}/world/entity/item/PrimedTnt.cpp"
    "${SRC_DIR}/world/entity/item/TripodCamera.cpp"
    "${SRC_DIR}/world/entity/Mob.cpp"
    "${SRC_DIR}/world/entity/MobCategory.cpp"
    "${SRC_DIR}/world/entity/monster/Creeper.cpp"
    "${SRC_DIR}/world/entity/monster/Monster.cpp"
    "${SRC_DIR}/world/entity/monster/PigZombie.cpp"
    "${SRC_DIR}/world/entity/monster/Skeleton.cpp"
    "${SRC_DIR}/world/entity/monster/Spider.cpp"
    "${SRC_DIR}/world/entity/monster/Zombie.cpp"
    "${SRC_DIR}/world/entity/Motive.cpp"
    "${SRC_DIR}/world/entity/Painting.cpp"
    "${SRC_DIR}/world/entity/PathFinderMob.cpp"
    "${SRC_DIR}/world/entity/player/Inventory.cpp"
    "${SRC_DIR}/world/entity/player/Player.cpp"
    "${SRC_DIR}/world/entity/projectile/Arrow.cpp"
    "${SRC_DIR}/world/entity/projectile/Throwable.cpp"
    "${SRC_DIR}/world/entity/SynchedEntityData.cpp"
    "${SRC_DIR}/world/food/SimpleFoodData.cpp"
    "${SRC_DIR}/world/inventory/BaseContainerMenu.cpp"
    "${SRC_DIR}/world/inventory/ContainerMenu.cpp"
    "${SRC_DIR}/world/inventory/FillingContainer.cpp"
    "${SRC_DIR}/world/inventory/FurnaceMenu.cpp"
    "${SRC_DIR}/world/item/ArmorItem.cpp"
    "${SRC_DIR}/world/item/BedItem.cpp"
    "${SRC_DIR}/world/item/crafting/ArmorRecipes.cpp"
    "${SRC_DIR}/world/item/crafting/FurnaceRecipes.cpp"
    "${SRC_DIR}/world/item/crafting/OreRecipes.cpp"
    "${SRC_DIR}/world/item/crafting/Recipe.cpp"
    "${SRC_DIR}/world/item/crafting/Recipes.cpp"
    "${SRC_DIR}/world/item/crafting/StructureRecipes.cpp"
    "${SRC_DIR}/world/item/crafting/ToolRecipes.cpp"
    "${SRC_DIR}/world/item/crafting/WeaponRecipes.cpp"
    "${SRC_DIR}/world/item/DyePowderItem.cpp"
    "${SRC_DIR}/world/item/HangingEntityItem.cpp"
    "${SRC_DIR}/world/item/HatchetItem.cpp"
    "${SRC_DIR}/world/item/HoeItem.cpp"
    "${SRC_DIR}/world/item/Item.cpp"
    "${SRC_DIR}/world/item/ItemInstance.cpp"
    "${SRC_DIR}/world/item/PickaxeItem.cpp"
    "${SRC_DIR}/world/item/ShovelItem.cpp"
    "${SRC_DIR}/world/level/biome/Biome.cpp"
    "${SRC_DIR}/world/level/biome/BiomeSource.cpp"
    "${SRC_DIR}/world/level/chunk/LevelChunk.cpp"
    "${SRC_DIR}/world/level/dimension/Dimension.cpp"
    "${SRC_DIR}/world/level/Explosion.cpp"
    "${SRC_DIR}/world/level/Level.cpp"
    "${SRC_DIR}/world/level/levelgen/CanyonFeature.cpp"
    "${SRC_DIR}/world/level/levelgen/DungeonFeature.cpp"
    "${SRC_DIR}/world/level/levelgen/feature/Feature.cpp"
    "${SRC_DIR}/world/level/levelgen/LargeCaveFeature.cpp"
    "${SRC_DIR}/world/level/levelgen/LargeFeature.cpp"
    "${SRC_DIR}/world/level/levelgen/RandomLevelSource.cpp"
    "${SRC_DIR}/world/level/levelgen/synth/ImprovedNoise.cpp"
    "${SRC_DIR}/world/level/levelgen/synth/PerlinNoise.cpp"
    "${SRC_DIR}/world/level/levelgen/synth/Synth.cpp"
    "${SRC_DIR}/world/level/LightLayer.cpp"
    "${SRC_DIR}/world/level/LightUpdate.cpp"
    "${SRC_DIR}/world/level/material/Material.cpp"
    "${SRC_DIR}/world/level/MobSpawner.cpp"
    "${SRC_DIR}/world/level/pathfinder/Path.cpp"
    "${SRC_DIR}/world/level/Region.cpp"
    "${SRC_DIR}/world/level/storage/ExternalFileLevelStorage.cpp"
    "${SRC_DIR}/world/level/storage/ExternalFileLevelStorageSource.cpp"
    "${SRC_DIR}/world/level/storage/FolderMethods.cpp"
    "${SRC_DIR}/world/level/storage/LevelData.cpp"
    "${SRC_DIR}/world/level/storage/LevelStorageSource.cpp"
    "${SRC_DIR}/world/level/storage/RegionFile.cpp"
    "${SRC_DIR}/world/level/TickNextTickData.cpp"
    "${SRC_DIR}/world/level/tile/BedTile.cpp"
    "${SRC_DIR}/world/level/tile/ChestTile.cpp"
    "${SRC_DIR}/world/level/tile/CropTile.cpp"
    "${SRC_DIR}/world/level/tile/DoorTile.cpp"
    "${SRC_DIR}/world/level/tile/EntityTile.cpp"
    "${SRC_DIR}/world/level/tile/entity/ChestTileEntity.cpp"
    "${SRC_DIR}/world/level/tile/entity/FurnaceTileEntity.cpp"
    "${SRC_DIR}/world/level/tile/entity/NetherReactorTileEntity.cpp"
    "${SRC_DIR}/world/level/tile/entity/SignTileEntity.cpp"
    "${SRC_DIR}/world/level/tile/entity/TileEntity.cpp"
    "${SRC_DIR}/world/level/tile/FurnaceTile.cpp"
    "${SRC_DIR}/world/level/tile/GrassTile.cpp"
    "${SRC_DIR}/world/level/tile/HeavyTile.cpp"
    "${SRC_DIR}/world/level/tile/LightGemTile.cpp"
    "${SRC_DIR}/world/level/tile/MelonTile.cpp"
    "${SRC_DIR}/world/level/tile/Mushroom.cpp"
    "${SRC_DIR}/world/level/tile/NetherReactor.cpp"
    "${SRC_DIR}/world/level/tile/NetherReactorPattern.cpp"
    "${SRC_DIR}/world/level/tile/StairTile.cpp"
    "${SRC_DIR}/world/level/tile/StemTile.cpp"
    "${SRC_DIR}/world/level/tile/StoneSlabTile.cpp"
    "${SRC_DIR}/world/level/tile/TallGrass.cpp"
    "${SRC_DIR}/world/level/tile/Tile.cpp"
    "${SRC_DIR}/world/level/tile/TrapDoorTile.cpp"
    "${SRC_DIR}/world/phys/HitResult.cpp"
)

# Linux专用平台适配
set(PLATFORM_SRC "${CMAKE_SOURCE_DIR}/../../src/AppPlatform_linux.cpp")

add_executable(mcpe_linux ${SRC_FILES} ${PLATFORM_SRC})

# 链接依赖库（如OpenGL、zlib、png等）
target_link_libraries(mcpe_linux
    pthread
    dl
    m
    GL
    X11
    z
    png
)

# 可根据需要添加SDL2等库
# find_package(SDL2 REQUIRED)
# include_directories(${SDL2_INCLUDE_DIRS})
# target_link_libraries(mcpe_linux ${SDL2_LIBRARIES})
